2002-04-07  Max Horn  <max@quendi.de>
	* forum/include/header.php,templates/main.tpl, templates/main_xhtml.tpl:
	  added "Studio" to the navbar

2002-03-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/download.dat: added BeOS binary
	* content/news.dat: weekly update

2002-03-18  Dominik Reichardt <gigdr@tesionmail.de>
	* content/download.dat: include Gimp Plugin for Windows

2002-03-15  Max Horn  <max@quendi.de>
	* content/download.dat: OS X version changed to 0.98rc1a

2002-03-12  Max Horn  <max@quendi.de>
	* download.php, content/download.dat: Major rewrite, should simplify handling
	  of the download section; updated to version 0.98rc1 files
	* templates/download_section.tpl, templates/empty.tpl: New auxillary files

2002-03-12  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt, content/faq.dat: version updated+other small updates
	
2002-03-11  Dominik Reichardt <gigdr@tesionmail.de>
	* download.php: added /snapshot/pentagram where all the stuff for Pentagram 
	  download is storeed

2002-03-10  Dominik Reichardt <gigdr@tesionmail.de>
	* download.php, content/download.dat, templates/download.tpl : Added Pentagram to Downloads

2002-03-08  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt updated
	* docs.txt added
	* content/docs.dat,faq.dat: updated
	* content/links.dat added the link to Ultima: The Reconstruction

2002-01-16  Max Horn  <max@quendi.de>
	* qipcounter.php3: removed
	* content/download.dat: added win32 exult studio snapshot
	* base.inc: removed call to counter code (not used anyway)

2002-01-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/news.dat: weekly update

2002-01-07  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt updated
	* content/docs.dat,faq.dat: updated
	* images/sfbug.jpg: added to show the checkbox to upload files

2002-01-10  Max Horn  <max@quendi.de>
	* Initial checkin
